<resources>
    <string name="app_name">足迹</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_toolbar">ToolbarActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="down_scale">Compressed Image</string>
    <string name="tx_erase">Erase</string>
    <string name="tx_unerase">Un-Erase</string>
    <string name="tx_apply">Apply</string>
    <string name="title_activity_agreement">AgreementActivity</string>

    <!-- base框架 模块-->
    <string name="close">关闭</string>
    <string name="uploadingImg">上传图片中</string>
    <string name="upload_fail">上传失败</string>

    <!-- 主页 -->
    <string name="time_record">时间神殿</string>
    <string name="explore_world">探索世界</string>
    <string name="nearby">附近</string>
    <string name="me">我的</string>

    <!-- 账户模块 -->
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login_tip">Tip:登录账号后，探索地图数据可以同步到服务器，建议用户注册账号，以免数据丢失</string>
    <string name="register_tip">点击[完成]代表你已阅读并同意用户使用协议</string>
    <string name="access">进入</string>
    <string name="setting">设置</string>
    <string name="go_to_login">去登录</string>
    <string name="welcome">欢迎加入足迹</string>
    <string name="invalid_phone">无效的手机号码</string>
    <string name="empty_phone">不存在该手机号码</string>
    <string name="phone_be_registered">该手机已经注册过</string>
    <string name="password_wrong">密码格式错误！请输入6-16位不含特殊字符的密码</string>
    <string name="empty_login">请输入完整的账号和密码</string>
    <string name="wrong_login">输入了错误的账号或者密码</string>
    <string name="expired_cord">验证码为空或过期</string>
    <string name="get_code">获取验证码</string>
    <string name="wrong_cord">验证码错误</string>
    <string name="update_pwd">修改密码</string>
    <string name="different_pwd">两次输入的密码不一致</string>
    <string name="pwd_succeed_update">密码修改成功</string>
    <string name="pwd_fail_update">密码修改失败</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="please_input_pwd">请创建6-16位的新密码</string>
    <string name="please_confirm_pwd">再次确认新的密码</string>
    <string name="confirm_update">确定修改</string>
    <string name="complete">完成</string>
    <string name="explore_time">探索时间 :</string>
    <string name="explore_area">探索面积 :</string>
    <string name="explore_percent">探索比率 :</string>
    <string name="explore_province">探索省份 :</string>
    <string name="explore_city">探索城市 :</string>

    <!-- Exception -->
    <string name="nonenetwork">没有网络连接</string>
    <string name="resultillegal">数据解析出错</string>
    <string name="timeout">网络不给力</string>

</resources>
