<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/register_sec"
        android:padding="10dp">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_phone"
            android:paddingLeft="5dp"
            android:textColorHint="@color/grey" />

        <LinearLayout
            android:id="@+id/lay_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/please_input_code"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:textColorHint="@color/grey" />

            <Button
                android:id="@+id/request_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/get_code"
                android:textColor="@color/dark_light" />
        </LinearLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lay_code"
            android:hint="@string/please_input_pwd"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:hint="@string/please_confirm_pwd"
            android:textColorHint="@color/grey" />

        <Button
            android:id="@+id/complete"
            style="@style/common_button_style"
            android:layout_below="@id/re_password"
            android:layout_centerHorizontal="true"
            android:text="@string/confirm_update" />

        <TextView
            android:id="@+id/register_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/complete" />
    </RelativeLayout>


</android.support.percent.PercentRelativeLayout>
